5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1650_2450.log
== TEST (2019-05-23 15:11:05) 
-- CODE:
x=input("Digite o nome do desgracado:")
y=input("Digite o nome do desgracado:")
if((x.upper())>y.upper()):
	print(x)
   print(y)
else:
	print(y)
	print(x)
-- ERROR:
File "XXXX", line 5
    print(y)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:11:35) 
-- CODE:
x=input("Digite o nome do desgracado:")
y=input("Digite o nome do desgracado:")
if((x.upper())>y.upper()):
	print(x)
	print(y)
	
-- ERROR:
File "XXXX", line 5
    print(y)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:11:41) 
-- CODE:
x=input("Digite o nome do desgracado:")
y=input("Digite o nome do desgracado:")
if((x.upper())>y.upper()):
	print(x)
	print(y)
else:
	print(y)
	
-- OUTPUT:
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:11:47) 
-- CODE:
x=input("Digite o nome do desgracado:")
y=input("Digite o nome do desgracado:")
if((x.upper())>y.upper()):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:11:55) 
-- CODE:
x=input("Digite o nome do desgracado:")
y=input("Digite o nome do desgracado:")
if((x.upper())>y.upper()):
	print(x)
	print(y)
else:
	print(y)
	print(x)
	
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:12:30) 
-- CODE:
x=input("Digite o nome do desgracado:")
y=input("Digite o nome do desgracado:")
if((x.upper())>y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:12:35) 
-- CODE:
x=input("Digite o nome do desgracado:")
y=input("Digite o nome do desgracado:")
if((x.upper())>y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y
-- ERROR:
File "XXXX", line 9
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:12:39) 
-- CODE:
x=input("Digite o nome do desgracado:")
y=input("Digite o nome do desgracado:")
if((x.upper())>y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 15:12:50) 
-- CODE:
x=input("Digite o nome do desgracado:")
y=input("Digite o nome do desgracado:")
if((x.upper())>y.upper()):
	print(y)
	print(x)
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.180603
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
